# work_for_brandquad

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  my_config.py  pyproject.toml
config/: settings.py  urls.py
nginx_logs/: admin.py  apps.py  models.py  paginators.py  serializers.py  services.py  tests.py  urls.py  views.py
nginx_logs/management/commands/: fill_logs.py
nginx_logs/migrations/: 0001_initial.py  0002_remove_parselogs_url_parselogs_uri.py
users/: models.py
users/migrations/: 0001_initial.py
